<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="24dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_creator_title"
            android:textColor="#000"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:alpha="0.87"
            android:gravity="center"
            android:text="@string/id_creator_msg"
            android:textColor="#000"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:tint="#2196f3"
            android:src="@drawable/baseline_credit_card_black_48" />

        <Button
            android:id="@+id/btn_create_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="24dp"
            android:background="#2196f3"
            android:elevation="4dp"
            android:text="@string/id_creator_create"
            android:textColor="#fff" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/id_creator_warn_btn" />

</FrameLayout>