<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="학생정보">

        <Preference
            android:key="pref_student"
            android:summary="0000 이름"
            android:title="학생정보 수정" />

        <EditTextPreference
            android:defaultValue="선택1"
            android:inputType="textAutoComplete"
            android:key="pref_pick1"
            android:summary="없음"
            android:title="선택1" />

        <EditTextPreference
            android:defaultValue="선택2"
            android:inputType="textAutoComplete"
            android:key="pref_pick2"
            android:summary="없음"
            android:title="선택2" />

        <EditTextPreference
            android:defaultValue="선택3"
            android:inputType="textAutoComplete"
            android:key="pref_pick3"
            android:summary="없음"
            android:title="선택3" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_category_security">

        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_app_lock"
            android:title="@string/setting_lock" />

        <Preference
            android:dependency="pref_app_lock"
            android:key="pref_reset_pass_code"
            android:title="@string/setting_pass_code" />

        <SwitchPreference
            android:defaultValue="false"
            android:dependency="pref_app_lock"
            android:key="pref_use_fingerprint"
            android:title="@string/setting_fingerprint" />

    </PreferenceCategory>

    <PreferenceCategory android:title="편의 기능 설정">

        <SwitchPreference
            android:key="pref_low_dpi"
            android:summary="작은 화면에 레이아웃을 최적화 합니다."
            android:title="작은 화면 모드" />

        <ListPreference
            android:defaultValue="16"
            android:entries="@array/array_text_size"
            android:entryValues="@array/array_text_size_value"
            android:key="pref_text_size"
            android:summary="시간표와 급식 정보에서 사용할 글씨 크기를 설정합니다."
            android:title="글씨 크기 설정" />

    </PreferenceCategory>

    <PreferenceCategory android:title="애플리케이션 정보">

        <Preference
            android:key="pref_version"
            android:summary="v4.4.1"
            android:title="@string/app_name" />

        <Preference
            android:key="pref_change_log"
            android:summary="변경사항을 보려면 터치하세요."
            android:title="변경사항" />

    </PreferenceCategory>

    <PreferenceCategory android:title="애플리케이션 제작">

        <Preference
            android:key="pref_developer"
            android:summary="최명근 (가람방송국, 57회 졸업생)"
            android:title="개발자" />

        <Preference android:title="제작관련 도움">

            <intent
                android:targetClass="com.RiDsoft.kangwonhighschool.ui.user.ThanksToActivity"
                android:targetPackage="com.RiDsoft.kangwonhighschool" />

        </Preference>

    </PreferenceCategory>

    <PreferenceCategory android:title="어플을 이용하는데 어려움이 있습니까?">

        <Preference
            android:summary="제작자에게 직접 이메일을 보내 문제를 해결하세요."
            android:title="메일">

            <intent
                android:action="android.intent.action.SENDTO"
                android:data="mailto:soc06212@gmail.com" />

        </Preference>

        <Preference
            android:key="kakaotalk"
            android:summary="카카오톡을 보내려면 클릭하세요."
            android:title="RiDsoft 카카오톡 플러스친구" />

    </PreferenceCategory>

</PreferenceScreen>